Autoreload dev server

--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
   "license": "MIT",
   "dependencies": {
     "discord.js": "^14.11.0",
-    "nodemon": "^2.0.22",
     "typescript": "^5.1.6"
   },
   "files": [
@@ -18,9 +17,13 @@
   ],
   "typings": "./lib/index.d.ts",
   "scripts": {
-    "dev": "nodemon build/index.js",
+    "dev": "nodemon src/index.ts",
     "build": "tsc",
     "lint": "tslint -c tslint.json src/**/*.ts",
     "prepublish": "npm run build"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.22",
+    "ts-node": "^10.9.1"
   }
 }
