--- a/package.json
+++ b/package.json
@@ -8,7 +8,12 @@
   },
   "license": "MIT",
   "dependencies": {
+    "@discordjs/builders": "^0.15.0",
+    "@discordjs/rest": "^0.5.0",
+    "discord-api-types": "^0.36.0",
+    "discord-command-parser": "^1.5.3",
     "discord.js": "^14.11.0",
+    "sqlite3": "^5.1.6",
     "typescript": "^5.1.6"
   },
   "files": [
@@ -23,7 +28,8 @@
     "prepublish": "npm run build"
   },
   "devDependencies": {
-    "nodemon": "^2.0.22",
+    "@types/sqlite3": "^3.1.8",
+    "nodemon": "^3.0.1",
     "ts-node": "^10.9.1"
   }
 }
