--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
   },
   "license": "MIT",
   "dependencies": {
-    "@discordjs/builders": "^0.15.0",
-    "@discordjs/rest": "^0.5.0",
+    "@discordjs/builders": "^1.6.4",
+    "@discordjs/rest": "^2.0.0",
     "discord-api-types": "^0.36.0",
     "discord-command-parser": "^1.5.3",
     "discord.js": "^14.11.0",
-    "sqlite3": "^5.1.6",
+    "better-sqlite3": "8.5.0",
     "typescript": "^5.1.6"
   },
   "files": [
