--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "discord-api-types": "^0.36.0",
     "discord-command-parser": "^1.5.3",
     "discord.js": "^14.11.0",
+    "superstruct": "1.0.3",
     "typescript": "^5.1.6"
   },
   "files": [
