--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "devDependencies": {
     "@types/better-sqlite3": "7.6.4",
+    "@types/node": "^24.3.1",
     "nodemon": "^3.0.1",
     "ts-node": "^10.9.2"
   }
